<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vmediacn.com.activity.load.RegistActivity">
    <include layout="@layout/head_title_main" />
    <LinearLayout
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login_phonumber"/>
        <EditText
            android:layout_marginLeft="5dp"
            android:hint="@string/please_input_phone_number"
            android:textColorHint="#eeeeee"
            android:singleLine="true"
            android:phoneNumber="true"
            android:layout_gravity="center_vertical"
            android:id="@+id/act_login_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:background="#eeeeee"
        android:layout_width="match_parent"
        android:layout_height="1dp"></LinearLayout>
    <!--密码-->
    <LinearLayout
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login_password"/>
        <EditText
            android:id="@+id/act_login_passWordId"
            android:layout_marginLeft="5dp"
            android:hint="请输入6-12位的密码"
            android:textColorHint="#eeeeee"
            android:singleLine="true"
            android:password="true"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:background="#eeeeee"
        android:layout_width="match_parent"
        android:layout_height="1dp"></LinearLayout>

    <!--确认密码-->
    <LinearLayout
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login_password"/>
        <EditText
            android:id="@+id/act_login_secod_passWordId"
            android:layout_marginLeft="5dp"
            android:hint="请再次确认密码"
            android:textColorHint="#eeeeee"
            android:singleLine="true"
            android:password="true"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:background="#eeeeee"
        android:layout_width="match_parent"
        android:layout_height="1dp"></LinearLayout>

    <!--验证码-->
    <!--密码-->
    <LinearLayout
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login_verifationcode"/>
        <EditText
            android:id="@+id/act_login_verification_code"
            android:layout_marginLeft="5dp"
            android:hint="@string/please_input_verification_code"
            android:textColorHint="#eeeeee"
            android:singleLine="true"
            android:phoneNumber="true"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"/>
        <Button
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/login_get_code"
            android:textSize="15dp"
            android:gravity="center"
            android:background="@mipmap/btn_code"
            android:id="@+id/act_regist_code_btn"
            android:textColor="#ffffff"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:background="#eeeeee"
        android:layout_width="match_parent"
        android:layout_height="1dp"></LinearLayout>
    <Button
        android:id="@+id/act_regist_btn"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="22sp"
        android:text="注册"
        android:clickable="true"
        android:textColor="#ffffff"
        android:background="@mipmap/btn_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:clickable="true"
        android:layout_marginTop="5dp"
        android:layout_gravity="end"
        android:gravity="end"
        android:layout_marginRight="10dp"
        android:text="@string/login_forger_password"
        android:textColor="#999999"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/act_login_forget_password"/>
</LinearLayout>
